--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,8 +51,9 @@ html{
 /* back, initially hidden pane */
 .back {
     transform: rotateY(180deg);
-    background-color: blue;
-    color:white
+    background-color: #00A550;
+    color:white;
+    text-align: center;
 }
 
 span{
@@ -61,4 +62,38 @@ span{
 .imageProps {
     width: 20vw;
     height: 22vw;
+}
+.xs{
+    font-size: 1.5vw;
+}
+.s{
+    font-size: 2vw;
+}
+.m{
+    font-size: 2.5vw;
+}
+.l{
+    font-size: 3vw;
+}
+.xl{
+    font-size: 3.5vw;
+}
+.s_img{
+    height:3vw;
+    width:3vw;
+}
+.m_img{
+    height:5vw;
+    width:5vw;
+    border-radius: 2vw;
+}
+.l_img{
+    width:10vw;
+    height:10vw;
+    border-radius:2vw;
+}
+.communication_channel_styles{
+    display: flex;
+    justify-content: space-around;
+    margin: 25% 0;
 }
