--- a/src/components/companyList.module.css
+++ b/src/components/companyList.module.css
@@ -1,5 +1,8 @@
 .container{
     display: flex;
     justify-content: space-evenly;
-    margin:25% 0;
+    padding:20vw 0;
+    padding-bottom: 8vw;
+    text-align: center;
+    color:white;
 }
