--- a/src/components/companyList.module.css
+++ b/src/components/companyList.module.css
@@ -1,8 +1,14 @@
 .container{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     padding:20vw 0;
     padding-bottom: 8vw;
     text-align: center;
     color:white;
+}
+.hoverEffect{
+    transition: transform 0.2s ease-in-out
+}
+.hoverEffect:hover{
+    transform: scale(1.5); 
 }
